--- a/AirPlayDeviceFInder/AirPlayDeviceFInder/Info.plist
+++ b/AirPlayDeviceFInder/AirPlayDeviceFInder/Info.plist
@@ -16,5 +16,7 @@
 		<string>msauthv2</string>
 		<string>msauthv3</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDefault</string>
 </dict>
 </plist>
