Code Optimisation and Bug Fixes - Removed IPAddress check to identify the service, Getting different ipaddress while connection and disconnection scenarios - Removed hardcoded dependency and Injected dependency to AirPlayDeviceListViewController - Added Local Network Usage description and Info.plist changes

--- a/AirPlayDeviceFInder/AirPlayDeviceFInder/Info.plist
+++ b/AirPlayDeviceFInder/AirPlayDeviceFInder/Info.plist
@@ -16,6 +16,10 @@
 		<string>msauthv2</string>
 		<string>msauthv3</string>
 	</array>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_airplay._tcp</string>
+	</array>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleDefault</string>
 </dict>
